# muzic

./: CMakeLists.txt  LICENSE  Readme.md  inflater.c  inflater.h  mz_config.h  sdefl.c  sdefl.h  sinfl.c  sinfl.h  tst.c  uzlib.h  zlib_comp.c  zlib_comp.h
examples/: CMakeLists.txt  README.md  defl2stdout.c  infl4stdin.c
tests/: CMakeLists.txt  defl_test.c  integration.c  interop.sh
